--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,4 @@
 LB_DATASOURCE_MOONGATE_URL=mongodb://honeypot_user:This_Is_N0t_%40_Str0ng_En0ugh_P%40ssw0rd@localhost:17017/moongate?authSource=admin
+SES_ACCESS_KEY_ID=AKIA6KLYDCZOB4GXZTUK
+SES_SECRET_ACCESS_KEY=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
+SES_REGION=us-east-2
