--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dotenv": "^10.0.0",
     "loopback-connector-mongodb": "^5.5.0",
     "loopback-connector-rest": "^4.0.1",
+    "loopback4-notifications": "^1.4.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
