--- a/package.json
+++ b/package.json
@@ -64,13 +64,15 @@
     "loopback-connector-mongodb": "^5.5.0",
     "loopback-connector-rest": "^4.0.1",
     "loopback4-notifications": "^1.4.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@loopback/build": "^6.4.1",
     "@loopback/eslint-config": "^10.2.1",
     "@loopback/testlab": "^3.4.1",
     "@types/node": "^10.17.60",
+    "@types/uuid": "^8.3.0",
     "eslint": "^7.28.0",
     "source-map-support": "^0.5.19",
     "typescript": "~4.3.2"
