--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@ LB_DATASOURCE_MOONGATE_URL=mongodb://honeypot_user:This_Is_N0t_%40_Str0ng_En0ugh
 SES_ACCESS_KEY_ID=AKIA6KLYDCZOB4GXZTUK
 SES_SECRET_ACCESS_KEY=AJWU2s1E5KkIh6iiKhNqIrKlvUsuoTI9s36+LofB
 SES_REGION=us-east-2
+PASSWORD_RESET_EMAIL_LIMIT=10
+APPLICATION_URL=http://localhost:3000
