--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ SES_SECRET_ACCESS_KEY=AJWU2s1E5KkIh6iiKhNqIrKlvUsuoTI9s36+LofB
 SES_REGION=us-east-2
 PASSWORD_RESET_EMAIL_LIMIT=10
 APPLICATION_URL=http://localhost:3000
+API_URL=http://localhost:3000
+REDIRECT_URL=http://www.baidu.com
