--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,5 @@ SES_REGION=us-east-2
 PASSWORD_RESET_EMAIL_LIMIT=10
 APPLICATION_URL=http://localhost:3000
 API_URL=http://localhost:3000
-REDIRECT_URL=http://www.baidu.com
+PATH_RESET_PASSWORD=/#/reset
+PATH_REDIRECT=/#/login
