--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ APPLICATION_URL=http://localhost:3000
 API_URL=http://localhost:3000
 PATH_RESET_PASSWORD=/#/reset
 PATH_REDIRECT=/#/login
+PATH_TRANSFER=/#/transfer
