--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "@loopback/rest-explorer": "^3.3.1",
     "@loopback/security": "^0.5.1",
     "@loopback/service-proxy": "^3.2.1",
+    "@sendgrid/mail": "^7.4.5",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "loopback-connector-mongodb": "^5.5.0",
     "loopback-connector-rest": "^4.0.1",
+    "loopback-connector-sendgrid": "^2.2.4",
     "loopback4-notifications": "^1.4.0",
     "moment": "^2.29.1",
     "tslib": "^2.0.0",
