email send from.

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 LB_DATASOURCE_MOONGATE_URL=mongodb://honeypot_user:This_Is_N0t_%40_Str0ng_En0ugh_P%40ssw0rd@localhost:17017/moongate?authSource=admin
-SES_ACCESS_KEY_ID=AKIA6KLYDCZOB4GXZTUK
-SES_SECRET_ACCESS_KEY=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
+SES_ACCESS_KEY_ID=
+SES_SECRET_ACCESS_KEY=
 SES_REGION=us-east-2
 PASSWORD_RESET_EMAIL_LIMIT=10
 APPLICATION_URL=http://localhost:3000
@@ -8,3 +8,5 @@ API_URL=http://localhost:3000
 PATH_RESET_PASSWORD=/#/reset
 PATH_REDIRECT=/#/login
 PATH_TRANSFER=/#/transfer
+SEND_GRID_KEY=
+SEND_FROM=support@moongate.investments
